logs/dag_id=insert_date/run_id=manual__2025-01-10T144750.114742+0000/task_id=sql_md_account_d/attempt=1.log
[2025-01-10T14:47:59.550+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: insert_date.sql_md_account_d manual__2025-01-10T14:47:50.114742+00:00 [queued]>
[2025-01-10T14:47:59.573+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: insert_date.sql_md_account_d manual__2025-01-10T14:47:50.114742+00:00 [queued]>
[2025-01-10T14:47:59.573+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 3
[2025-01-10T14:47:59.754+0000] {taskinstance.py:2191} INFO - Executing <Task(SQLExecuteQueryOperator): sql_md_account_d> on 2025-01-10 14:47:50.114742+00:00
[2025-01-10T14:47:59.762+0000] {standard_task_runner.py:60} INFO - Started process 773 to run task
[2025-01-10T14:47:59.765+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'insert_date', 'sql_md_account_d', 'manual__2025-01-10T14:47:50.114742+00:00', '--job-id', '1498', '--raw', '--subdir', 'DAGS_FOLDER/insert_data.py', '--cfg-path', '/tmp/tmp4i4wuf6r']
[2025-01-10T14:47:59.768+0000] {standard_task_runner.py:88} INFO - Job 1498: Subtask sql_md_account_d
[2025-01-10T14:47:59.817+0000] {task_command.py:423} INFO - Running <TaskInstance: insert_date.sql_md_account_d manual__2025-01-10T14:47:50.114742+00:00 [running]> on host 711845a6becd
[2025-01-10T14:47:59.908+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='budanovsa' AIRFLOW_CTX_DAG_ID='insert_date' AIRFLOW_CTX_TASK_ID='sql_md_account_d' AIRFLOW_CTX_EXECUTION_DATE='2025-01-10T14:47:50.114742+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-10T14:47:50.114742+00:00'
[2025-01-10T14:47:59.909+0000] {sql.py:276} INFO - Executing: INSERT INTO ds.md_account_d( 
     data_actual_date
    ,data_actual_end_date
    ,account_rk
    ,account_number
    ,char_type
	,currency_rk
	,currency_code
)
SELECT
      to_date(mad."DATA_ACTUAL_DATE", '%Y-%m-%d') 
    , to_date(mad."DATA_ACTUAL_END_DATE", '%Y-%m-%d')
    , mad."ACCOUNT_RK"
    , SUBSTRING(mad."ACCOUNT_NUMBER", 3)::BIGINT
	, mad."CHAR_TYPE"
	, mad."CURRENCY_RK"
	, mad."CURRENCY_CODE"
  FROM stage.md_account_d mad
 WHERE mad."DATA_ACTUAL_DATE" IS NOT NULL
   AND mad."DATA_ACTUAL_END_DATE" IS NOT NULL
   AND mad."ACCOUNT_RK" IS NOT NULL
   AND mad."ACCOUNT_NUMBER" IS NOT NULL
   AND mad."CHAR_TYPE" IS NOT NULL
   AND mad."CURRENCY_RK" IS NOT NULL
   AND mad."CURRENCY_CODE" IS NOT NULL
On conflict on constraint md_account_d_pkey do update
	set data_actual_end_date=excluded.data_actual_end_date
		account_number=excluded.account_number
		char_type=excluded.char_type
		currency_rk=excluded.currency_rk
		currency_code=excluded.currency_code; 



[2025-01-10T14:47:59.919+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T14:47:59.928+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T14:47:59.997+0000] {sql.py:450} INFO - Running statement: INSERT INTO ds.md_account_d( 
     data_actual_date
    ,data_actual_end_date
    ,account_rk
    ,account_number
    ,char_type
	,currency_rk
	,currency_code
)
SELECT
      to_date(mad."DATA_ACTUAL_DATE", '%Y-%m-%d') 
    , to_date(mad."DATA_ACTUAL_END_DATE", '%Y-%m-%d')
    , mad."ACCOUNT_RK"
    , SUBSTRING(mad."ACCOUNT_NUMBER", 3)::BIGINT
	, mad."CHAR_TYPE"
	, mad."CURRENCY_RK"
	, mad."CURRENCY_CODE"
  FROM stage.md_account_d mad
 WHERE mad."DATA_ACTUAL_DATE" IS NOT NULL
   AND mad."DATA_ACTUAL_END_DATE" IS NOT NULL
   AND mad."ACCOUNT_RK" IS NOT NULL
   AND mad."ACCOUNT_NUMBER" IS NOT NULL
   AND mad."CHAR_TYPE" IS NOT NULL
   AND mad."CURRENCY_RK" IS NOT NULL
   AND mad."CURRENCY_CODE" IS NOT NULL
On conflict on constraint md_account_d_pkey do update
	set data_actual_end_date=excluded.data_actual_end_date
		account_number=excluded.account_number
		char_type=excluded.char_type
		currency_rk=excluded.currency_rk
		currency_code=excluded.currency_code; 


, parameters: None
[2025-01-10T14:48:00.002+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "account_number")
LINE 28:   account_number=excluded.account_number
           ^

[2025-01-10T14:48:00.012+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=insert_date, task_id=sql_md_account_d, execution_date=20250110T144750, start_date=20250110T144759, end_date=20250110T144800
[2025-01-10T14:48:00.030+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1498 for task sql_md_account_d (ОШИБКА:  ошибка синтаксиса (примерное положение: "account_number")
LINE 28:   account_number=excluded.account_number
           ^
; 773)
[2025-01-10T14:48:00.058+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-01-10T14:48:00.087+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
